app/assets/stylesheets/components/filters.scss
@import "../variables_mixins";

.filters {
	&__form {
		position: relative;
	}

	&__toggle {
		display: flex;
		align-items: center;

		a {
			text-decoration: none;
		}

		button {
			border: none;
			background: none;
			font-family: $sans-serif;
			cursor: pointer;
			display: flex;
			align-items: center;
			gap: 0.25em;

			svg {
				width: 0.5rem;
				height: 0.5rem;
				color: $base_primary;
			}
		}
	}

	&__link {
		border-bottom: 2px solid $base-rules-dark;

		&--today {
			margin-right: 0.5rem;
		}
	}

	&__date-input {
		position: absolute;
		opacity: 0;
		width: 0;
		height: 0;
		pointer-events: none;
	}

	&__label {
		text-align: left;
		margin-left: 0.25rem;
	}

	&__dropdown {
		background-color: $base-background;
		box-shadow: 7px 7px 20px 0px rgba(153, 134, 117, 0.83);
		padding: 0.8rem;
		position: absolute;
		top: 2rem;
		left: 0;
		z-index: 500;
		text-align: left;
		white-space: nowrap;
		max-width: calc(100vw - 2rem);
		overflow-x: auto;

		&--hidden {
			display: none;
		}
	}

	&__option {
		padding: 0.25rem 0;
		display: grid;
		grid-template-columns: auto 1fr;
	}

	input {
		&:checked + label {
			font-weight: bold;
		}
	}

	hr {
		border-width: 3px 0 0;
	}
}

